styles.css
body {
    padding: 0px;
    margin: 0px;
    background-color: rgb(250, 248, 248);
    font-family: sans-serif;
}

h1 {
    text-align: center;
}

#container {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr;
    gap: 15px;
    padding: 24px;
    margin-top: 20px;
}

.book-card {
    display: grid;
    padding: 12px;
    flex-direction: column;
    align-items: center;
    background-color: rgb(255, 255, 255);
    border-radius: 12px;


}

.info {
    margin: 0px;
    padding: 8px;
    text-align: center;
    font-size: 22px;
}

.author {
    font-size: 16px;
}

.pages {
    font-size: 12px;
}


.btn {
    margin: 8px;
    font-size: 90%;
    border-radius: 8px;
    border: 0px;
    height: 28px;
    background-color: rgb(223, 223, 223);
}

.btn:hover {
    background-color: rgb(194, 194, 194) ;
}


#input-modal:modal {

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 16px;
    gap: 16px;
}

#input-form {
    display: flex;
    flex-direction: column;
    gap: 14px;
    margin: 12px;
}

#submit-btn {
    background-color: rgb(123, 189, 123);
}

.read {
    background-color:  rgb(123, 189, 123);
}

.read:hover {
    background-color:  rgb(93, 146, 93);
}

.unread {
    background-color: rgb(189, 101, 101);
}

.unread:hover {
    background-color: rgb(155, 86, 86);
}


.header {
    background-color: rgb(255, 255, 255);
    min-height: 80px;
}

.main-container {
    display: flex;
    flex-direction: column;

}

.add-new-area {
    align-self: center;
    justify-self: center;
    padding-top: 24px;
}

#add-new {
    font-size: 18px;
    background: none;
    border: none;
}

#add-new:hover {
    border-bottom: solid 2px black;
}

